Fix pre wrapping. Migrate a few more.

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,6 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "Courier New", serif;
     color: #000;
 }
 
@@ -57,7 +56,7 @@ img {
 blockquote {
     padding: 0 25px;
     color: gray;
-    font-family: "Courier", serif;
+    font-family: "Courier New", serif;
 }
 
 .fancy {
@@ -77,7 +76,7 @@ blockquote {
 
 .posts span {
     color: #616e82;
-    font-family: Monaco, "Courier", monospace;
+    font-family: "Courier New", serif;
     font-size: .8em;
 }
 
@@ -163,6 +162,12 @@ p img {
     border: 1px solid #ddd;
     background-color: #eef;
     padding: 0 .4em;
+
+    overflow-x: auto;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;
 }
 
 .post ul,
